# dmenu-extended

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_SETUP.md  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.sh  test.sh
.github/workflows/: ci.yml  release.yml
src/dmenu_extended/: install_systemd_service.py  main.py
tests/: Dockerfile  check_version_string.sh  system_tests.sh  test_cache.py  test_execute.py  test_frequently_used_cleanup.py  test_helpers_extra.py  test_install_systemd_service.py  test_launch.py  test_main.py  test_menu.py  test_plugins.py  test_preferences.py  test_run_open_with.py  test_run_store_modification.py  test_settings_menu.py
